tried to do a workaround for login flickering upon refresh due to serverside rendering using auth resolver and http interceptor

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,18 @@ body {
 	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e)
   }
 
+  .loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
 
 .mainLogin{
 	width: 350px;
